<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.medi.LoginPage"
    android:background="#00838F"
    android:id="@+id/login_layout"


    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="239dp"
        android:layout_height="127dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/icon_brand"
        app:srcCompat="@drawable/infinit_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.078"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="49dp"
        android:alpha="0.6"
        android:background="@drawable/user_textbox"
        android:paddingLeft="20dp"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="@color/text_blue"
        android:textColorHint="@color/text_blue"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.329"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:background="@drawable/pass_text_box"
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:alpha="0.6"
        android:paddingLeft="20dp"
        android:drawablePadding="4dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/text_blue"
        android:textColorHint="@color/text_blue"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.916"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/email"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape_two"
        android:text="@string/login"
        android:alpha="0.6"
        android:textColor="@color/text_blue"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.498"
        app:layout_constraintRight_toRightOf="@+id/password"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textbox"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="38dp"
        android:textColor="@color/off_white"
        android:text="@string/not_registered_yet"
        android:textSize="16sp"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.06" />

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="116dp"
        android:layout_height="39dp"
        android:text="@string/sign_up_here"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:textColor="@color/text_yellow"
        android:layout_marginEnd="86dp"
        android:paddingLeft="5dp"
        android:layout_marginRight="86dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textbox"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textbox"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.888"
        app:layout_constraintLeft_toRightOf="@+id/textbox"
        android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.03" />


</android.support.constraint.ConstraintLayout>
